infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-app
  labels:
    app.kubernetes.io/part-of: restaurant-reservation-app
